
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-02-27 DP  1.9.0  Remove an obsolete FORCE option on the Maintenance 
                      dialogue [Robins Tharakan]
2008-02-27 DP  1.8.3  Properly quote synonym names when refreshing.
2008-02-27 DP  1.9.0  Add basic support for function parameter default values
                      on EnterpriseDB.
2008-02-26 DP  1.8.3  Parse function parameter names correctly when they
                      contain commas.
2008-02-24 DP  1.8.3  FOSDEM fix: Include overriding columns in reverse
                      engineered SQL for child tables, rather than commenting
                      them out and marking as inherited.
2008-02-20 DP  1.8.3  Avoid quoting 'text' when used as a type name per Erwin.
2008-02-18 DP  1.8.3  Correctly generate table DDL when inherited columns
                      follow the last 'real' column, per Peter Gagarinov.
2008-02-13 DP  1.8.3  Sort the functions in the combo box on the Trigger
                      dialogue [Robins Tharakan]
2008-02-13 DP  1.8.3  Hide array variants of table-types in datatype selectors
                      where we already hide the table type itself.
2008-02-08 GL  1.8.3  Fix query that tries to apply the schema restriction.
2008-02-08 DP  1.8.3  Specify the length correctly when creating columns of 
                      'time with time zone' and friends.
2008-02-07 GL  1.9.0  Add Drop/Reassign Owned support with a specific dialog.
2008-02-06 DP  1.9.0  Add options to the Edit Grid to allow sorting and 
                      filtering based on the selected cell [Robins Tharakan]
2008-02-04 DP  1.8.3  Allow non-superusers to debug their own functions.