@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-02-27 DP  1.9.0  Allow the user a chance to abort if there is an error
+                      when deleting rows in the edit grid [Robins Tharakan]
 2008-02-27 DP  1.9.0  Remove an obsolete FORCE option on the Maintenance 
                       dialogue [Robins Tharakan]
 2008-02-27 DP  1.8.3  Properly quote synonym names when refreshing.
